[package]
name = "plug_pricing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0" # Standard Rust licensing


[lib]
crate-type = ["cdylib"]

[dependencies]
mcp-plugin-api = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"
futures = "0.3.31"

